@@ -39,6 +39,14 @@ jobs:
           pip --version
           pip install --upgrade setuptools>=74 wheel
 
+      - name: Fix user Scripts missing from PATH
+        if: matrix.architecture == 'x86'
+        run: |
+          # Work around https://github.com/actions/setup-python/issues/1005
+          $ScriptsPath = python -c "import sysconfig,os; print(sysconfig.get_path('scripts', f'{os.name}_user'))"
+          echo $ScriptsPath
+          Add-Content $env:GITHUB_PATH $ScriptsPath
+
       - name: Build and install
         run: pip install . -v --user
 
@@ -49,13 +57,12 @@ jobs:
       - name: Generate PyWin32.chm help file
         run: python AutoDuck/make.py
 
-      # Smokescreen test to validate it doesn't crash and dlls can be found
+      # Smokescreen test to validate postinstall doesn't crash, dlls can be found, and both pathless invocation methods work
       - name: Run postinstall install/remove
         run: |
           $UserSite = "$(python -m site --user-site)"
-          cd "$UserSite/.."
-          python Scripts/pywin32_postinstall.py -install -destination "$UserSite"
-          python Scripts/pywin32_postinstall.py -remove -destination "$UserSite"
+          python -m win32.scripts.pywin32_postinstall -install -destination "$UserSite"
+          pywin32_postinstall -remove -destination "$UserSite"
 
       - name: Run tests
         # Run the tests directly from the source dir so support files (eg, .wav files etc)
